checker/tests/output/pairs/ill-typed/bad-pairs-6.stella
ERROR_UNEXPECTED_TUPLE
